[gd_scene load_steps=48 format=3 uid="uid://d0hdrurd0b7vf"]

[ext_resource type="Script" uid="uid://coq5600e2s276" path="res://Scenes/Player/player.gd" id="1_a3d8c"]
[ext_resource type="Texture2D" uid="uid://d0yeloxghfvyv" path="res://Ninja Adventure - Asset Pack/Actor/Characters/NinjaRed2/SeparateAnim/Walk.png" id="2_a3d8c"]
[ext_resource type="Texture2D" uid="uid://bfnnplsbkkghw" path="res://Ninja Adventure - Asset Pack/Actor/Characters/NinjaRed2/SeparateAnim/Attack.png" id="2_dd0ac"]
[ext_resource type="Texture2D" uid="uid://bipkw4w2g46fb" path="res://Ninja Adventure - Asset Pack/Actor/Characters/NinjaRed2/SpriteSheet.png" id="3_0u5uq"]
[ext_resource type="Texture2D" uid="uid://dc3lfkt4mcmh6" path="res://Ninja Adventure - Asset Pack/Items/Scroll/ScrollEmpty.png" id="3_xpcdj"]
[ext_resource type="Texture2D" uid="uid://75xsf5j8hj20" path="res://Ninja Adventure - Asset Pack/Ui/LifeReceptacle/heart_2.png" id="4_mtuoh"]
[ext_resource type="Texture2D" uid="uid://dctb706ipdmqm" path="res://Ninja Adventure - Asset Pack/Items/Weapons/BigSword/Sprite.png" id="5_htcer"]
[ext_resource type="AudioStream" uid="uid://d4jb6kk3w7po" path="res://Ninja Adventure - Asset Pack/Sounds/Game/Hit3.wav" id="8_jlvik"]
[ext_resource type="AudioStream" uid="uid://bk4yfgdk7mr4" path="res://Ninja Adventure - Asset Pack/Sounds/Game/Sword.wav" id="9_gk6dx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_eksi1"]
atlas = ExtResource("2_dd0ac")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jincj"]
atlas = ExtResource("2_dd0ac")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqdc0"]
atlas = ExtResource("2_dd0ac")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qr1w5"]
atlas = ExtResource("2_dd0ac")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ythyg"]
atlas = ExtResource("3_0u5uq")
region = Rect2(0, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3d8c"]
atlas = ExtResource("2_a3d8c")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_74mp2"]
atlas = ExtResource("2_a3d8c")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oikmp"]
atlas = ExtResource("2_a3d8c")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_06tpx"]
atlas = ExtResource("2_a3d8c")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpcdj"]
atlas = ExtResource("2_a3d8c")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtuoh"]
atlas = ExtResource("2_a3d8c")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_htcer"]
atlas = ExtResource("2_a3d8c")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dd0ac"]
atlas = ExtResource("2_a3d8c")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0u5uq"]
atlas = ExtResource("2_a3d8c")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlvik"]
atlas = ExtResource("2_a3d8c")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gk6dx"]
atlas = ExtResource("2_a3d8c")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhyir"]
atlas = ExtResource("2_a3d8c")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7g0yx"]
atlas = ExtResource("2_a3d8c")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dey5f"]
atlas = ExtResource("2_a3d8c")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5xpd"]
atlas = ExtResource("2_a3d8c")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ks1b7"]
atlas = ExtResource("2_a3d8c")
region = Rect2(16, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_74mp2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eksi1")
}],
"loop": true,
"name": &"attack_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jincj")
}],
"loop": true,
"name": &"attack_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqdc0")
}],
"loop": true,
"name": &"attack_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qr1w5")
}],
"loop": true,
"name": &"attack_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ythyg")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3d8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74mp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oikmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06tpx")
}],
"loop": true,
"name": &"move_down",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpcdj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtuoh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htcer")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dd0ac")
}],
"loop": true,
"name": &"move_left",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0u5uq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlvik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gk6dx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhyir")
}],
"loop": true,
"name": &"move_right",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7g0yx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dey5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5xpd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ks1b7")
}],
"loop": true,
"name": &"move_up",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a3d8c"]
radius = 5.0
height = 12.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a3d8c"]
size = Vector2(8, 8)

[sub_resource type="CircleShape2D" id="CircleShape2D_xpcdj"]
radius = 3.0

[sub_resource type="LabelSettings" id="LabelSettings_mtuoh"]
font_size = 48

[sub_resource type="AtlasTexture" id="AtlasTexture_hnuln"]
atlas = ExtResource("4_mtuoh")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqm4k"]
atlas = ExtResource("4_mtuoh")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcvs5"]
atlas = ExtResource("4_mtuoh")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8ma5"]
atlas = ExtResource("4_mtuoh")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_eksi1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnuln")
}],
"loop": true,
"name": &"0hp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqm4k")
}],
"loop": true,
"name": &"1hp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcvs5")
}],
"loop": true,
"name": &"2hp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8ma5")
}],
"loop": true,
"name": &"3hp",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dd0ac"]
size = Vector2(10, 20)

[sub_resource type="Animation" id="Animation_0u5uq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sword:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sword:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3, -11)]
}

[sub_resource type="Animation" id="Animation_gk6dx"]
resource_name = "attack_down"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sword:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.6580628, 4.6251225]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sword:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 5.0000005)]
}

[sub_resource type="Animation" id="Animation_jhyir"]
resource_name = "attack_left"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sword:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [3.2288592, 6.195919]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sword:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-8, 1)]
}

[sub_resource type="Animation" id="Animation_jlvik"]
resource_name = "attack_right"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sword:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.08726646, 3.0543263]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sword:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9, 0.99999905)]
}

[sub_resource type="Animation" id="Animation_dd0ac"]
resource_name = "attack_up"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sword:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.4835298, 1.4835298]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sword:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3, -11)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gk6dx"]
_data = {
&"RESET": SubResource("Animation_0u5uq"),
&"attack_down": SubResource("Animation_gk6dx"),
&"attack_left": SubResource("Animation_jhyir"),
&"attack_right": SubResource("Animation_jlvik"),
&"attack_up": SubResource("Animation_dd0ac")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 7
script = ExtResource("1_a3d8c")
move_speed = 60.0
push_strength = 300.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_74mp2")
animation = &"death"
autoplay = "move_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_a3d8c")

[node name="InteractArea2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea2D"]
shape = SubResource("RectangleShape2D_a3d8c")
debug_color = Color(0.2597731, 0.62163234, 0.4005265, 0.41960785)

[node name="HitboxArea2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxArea2D"]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_xpcdj")
debug_color = Color(0.94473004, 0.20365131, 0.3159419, 0.41960785)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_left = 144.0
offset_top = 53.0
offset_right = 314.0
offset_bottom = 123.0

[node name="TreasureLabel" type="Label" parent="CanvasLayer/Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 87.0
offset_bottom = 69.0
text = "0"
label_settings = SubResource("LabelSettings_mtuoh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 91.0
offset_right = 159.0
offset_bottom = 68.0
texture = ExtResource("3_xpcdj")

[node name="HpBar" type="AnimatedSprite2D" parent="CanvasLayer"]
unique_name_in_owner = true
position = Vector2(90.99999, 85.99999)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_eksi1")
animation = &"2hp"

[node name="Sword" type="Sprite2D" parent="."]
visible = false
position = Vector2(-3, -11)
texture = ExtResource("5_htcer")
offset = Vector2(0, -5)

[node name="SwordArea2D" type="Area2D" parent="Sword"]
unique_name_in_owner = true
position = Vector2(0, -5)
collision_layer = 2
collision_mask = 16
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sword/SwordArea2D"]
shape = SubResource("RectangleShape2D_dd0ac")

[node name="AttackDurationTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_gk6dx")
}

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DamageSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_jlvik")

[node name="SwordSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_gk6dx")

[connection signal="body_entered" from="InteractArea2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="InteractArea2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="HitboxArea2D" to="." method="_on_hitbox_area_2d_body_entered"]
[connection signal="body_entered" from="Sword/SwordArea2D" to="." method="_on_sword_area_2d_body_entered"]
[connection signal="timeout" from="AttackDurationTimer" to="." method="_on_attack_duration_timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
